Fixed checkbox not visible

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -24,3 +24,9 @@
     margin-bottom: 5px;
     margin-left: 10px;
 }
+
+.even input[type="checkbox"] {
+    display: none; }
+
+.odd input[type="checkbox"] {
+    display: none; }
